--- a/camp-us/src/main/webapp/resources/css/style.css
+++ b/camp-us/src/main/webapp/resources/css/style.css
@@ -1,3 +1,38 @@
+/* commuinty */
+.commuinty{
+   float: right;
+}
+/* commuinty */
+
+/* kategorie */
+.kategorie{
+   float: left;
+   white-space: nowrap;
+   width: 120px;
+   margin-left: 30px;
+}
+/* kategorie */
+
+/* kategowr */
+.kategowr{
+   margin-left: 30px;
+   
+}
+/* kategowr */
+
+/* mycommunity */
+.know-how{
+	width:60px;
+}  
+/* mycommunity */
+
+  /* searchResult */
+.search {
+	margin-top: 50px;
+}
+  /* searchResult */
+
+
 /* Base */
 body {
   line-height: 1.7;
@@ -751,5 +786,4 @@ a {
   width: 120px;
   border-radius: 50%;
   margin-bottom: 20px; }
-  
   
