--- a/camp-us/src/main/webapp/resources/css/style.css
+++ b/camp-us/src/main/webapp/resources/css/style.css
@@ -31,6 +31,29 @@
 	margin-top: 50px;
 }
   /* searchResult */
+  
+ /* 글작성하는 테두리 가운데 정렬부분 */
+  .div-1{
+  width:530px;
+  margin-left:auto;
+  padding:40px;
+  margin-right:auto;
+  text-align:center;
+  }
+  
+  /* 이미지 둥글게 */
+  .box {
+    width: 60px;
+    height: 60px; 
+    border-radius: 70%;
+    overflow: hidden;
+}
+.profile {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+  /* 이미지 둥글게 */
 
 
 /* Base */
